fix: remove grey borders around the map on mobile devises

--- a/styles.css
+++ b/styles.css
@@ -283,6 +283,7 @@ body {
     flex-direction: column;
   }
   .map-section {
+    flex: 1;
     width: 100vw;
     max-width: 100vw;
   }
